fixes for 3.3.15